@@ -5,18 +5,27 @@
 {% block page_title %}{% trans "Confirm sending" %}{% endblock %}
 
 {% block content %}
+  {% if courses %}
+    <h4>{% trans "Courses" %}</h4>
+    <ul>
+      {% for course in courses %}
+        <li>{{ course.short_name }}</li>{% endfor %}
+    </ul>
+  {% endif %}
+
   <p>{% blocktrans %}Are you sure you want to send confirmation email to each instructor ?{% endblocktrans %}</p>
 
   <form action="" method="post">{% csrf_token %}
-{% crispy form %}
-<div class="clearfix"></div>
-  <div class="form-group">
-    <button type="submit" class="btn btn-danger"><i class="icon icon-mail"></i>&nbsp;{% trans 'Send email' %}</button>
-    &nbsp;&nbsp;
-    <a href="{{ course.get_backend_url }}" class="btn btn-default">
-      <i class="icon icon-cancel"></i> {% trans "Cancel" %}
-    </a>
-  </div>
-</form>
+    {% crispy form %}
+    <div class="clearfix"></div>
+    <div class="form-group">
+      <button type="submit" class="btn btn-danger"><i class="icon icon-mail"></i>&nbsp;{% trans 'Send email' %}</button>
+      &nbsp;&nbsp;
+      <a href="{% if cancel_url %}{{ cancel_url }}{% else %}{{ course.get_backend_url }}{% endif %}"
+         class="btn btn-default">
+        <i class="icon icon-cancel"></i> {% trans "Cancel" %}
+      </a>
+    </div>
+  </form>
 
 {% endblock content %}
