@@ -11,6 +11,7 @@ and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0
 - Send paying invoices to accountants if after registration period
 - Export of invoices to excel format
 - Send confirmation mail to multiple courses
+- Send information mail to supervisors of multiple courses
 
 ### Fixed
 - course creation was not possible if no city override was provided
